--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <li> Docker: Creando containers sin dolor de cabeza </li>
     <li> Ansible </li>
     <li> Integración continua: Madurez y productividad en el desarrollo de software </li>
-    </ul>
+    <li> Kubernetes: Orquestación de containers</li>
+  </ul>
 </body>
 </html>
